--- a/css/Inventory.css
+++ b/css/Inventory.css
@@ -1,17 +1,18 @@
 ﻿html {
     scroll-behavior: smooth;
     font-family: "Josefin Sans", sans-serif;
+    min-height: 100%;
 }
 
 body {
     font-family: "Josefin Sans", sans-serif;
-    background-image: url('../images/desktop.jpg'); 
+    background-image: url('../images/bgm.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100%;
 }
 
 .joti-one-regular {
@@ -68,7 +69,7 @@ body {
 .sidebar li a {
     text-decoration: none;
     font-family: "Joti One", serif;
-    font-size: 20px;
+    font-size: 17px;
     color: inherit;
     display: flex;
     align-items: center;
