--- a/css/messages.css
+++ b/css/messages.css
@@ -139,7 +139,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Joti One", serif;
 }
 
 .notification-list {
