--- a/css/Inventory.css
+++ b/css/Inventory.css
@@ -40,6 +40,7 @@ body {
     justify-content: space-between;
     border-radius: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
 }
 
 .sidebar ul {
@@ -55,7 +56,7 @@ body {
     display: flex;
     align-items: center;
     color: #333333;
-    font-size: 17px;
+    font-size: 20px;
     margin-top: 20px;
 }
 
@@ -100,6 +101,7 @@ body {
     background-color: rgba(255, 255, 255, 0.52);
     border-bottom: 1px solid #ddd;
     border-radius: 10px;
+    font-size: 20px;
 }
 
 .admin-profile {
@@ -109,8 +111,8 @@ body {
 }
 
 .admin-profile img.profile-pic {
-    width: 40px; 
-    height: 40px;
+    width: 50px; 
+    height: 50px;
     border-radius: 50%;
     margin-right: 10px; 
 }
@@ -119,7 +121,9 @@ body {
     font-weight: bold;
     color: #333;
     margin: 0;
+    font-family: "Joti One", serif;
 }
+
 
 .main-content {
     margin-left: 300px;
@@ -132,6 +136,8 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    font-size: 20px;
+    font-family: "Joti One", serif;
 }
 
 .header-left {
@@ -155,15 +161,17 @@ header {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #333; 
+    color: #000000; 
     font-weight: bold;
     margin-left: 10px;
     padding-top: 180px;
+    font-size: 20px; 
+    font-family: "Joti One", serif;
 }
 
 .logout-link span {
     margin-left: 5px; 
-    font-size: 16px;  
+    font-size: 20px;  
 }
 
 .logout-icon {
